# secretui

./: .gitignore  CHANGELOG.md  Cargo.toml  METADATA.md  Project_OKR.md  README.md  RELEASE.md  SECURITY.md  UX.md  list_secret_entries.sh
.github/workflows/: ci.yml  release.yml
examples/: metadata-only.json
src/: domain.rs  lib.rs  main.rs  metadata.rs  store.rs  store_secret_service.rs  terminal.rs  tui.rs
src/metadata/: application.rs  format.rs  io.rs  planning.rs  tests.rs
src/store/: memory.rs
src/tui/: actions.rs  input.rs  rendering.rs  secret.rs  tests.rs
tests/: integration_secret_service.rs
