[package]
name = "secretui"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.97"
publish = false

[dependencies]
anyhow = "1"
arboard = "3"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
crossterm = "0.29"
ratatui = "0.30"
secret-service = { version = "5.1", features = ["rt-tokio-crypto-rust"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tempfile = "3"
unicode-segmentation = "1"
unicode-width = "0.2"
zeroize = "1"
zbus = "5"
